== 1.2.9.3 ==
Release date: April 15, 2020
* Added: Button width option
* Fixed: WPML compatibility was missing for some widgets
* Fixed: Gravity Forms CSS & JS files were loading on all pages
* Fixed: Link effects CSS issue

== 1.2.9.2 ==
Release date: April 8, 2020
* Fixed: Hotspot icon was not showing in editor in Image Hotspots widget
* Added: Option to randomize logos in Logo Carousel widget
* Fixed: Input fields padding option was not working in Gravity Forms widget
* Fixed: Input focus background option was not working in Gravity Forms widget
* Enhancement: Added styling for dropdown option in Gravity Forms widget
* Updated: "Input & Textarea" section label to "Input, Textarea & Dropdown" in Gravity Forms widget
* Added: input focus color option in Gravity Forms widget

== 1.2.9.1 ==
Release date: March 30, 2020
* Fixed: PHP error in query control

== 1.2.9 ==
Release date: March 29, 2020
* Enhancement: Updated query controls in Content Ticker and Advanced Accordion widgets

== 1.2.8.7 ==
Release date: March 11, 2020
* Fixed: Swiper slider after updating to Elementor 2.9.5

== 1.2.8.6 ==
Release date: March 10, 2020
* Added: Equal height boxes option in Info Box carousel widget
* Removed Google+ icon option from Team Member carousel widget
* Added: Image size option in Logo Grid widget
* Added: Image width option in Logo Grid widget
* Added: HTML tag option for heading and sub heading in Promo Box widget
* Added: Icon number typography option in Info List widget
* Added: Hotspot link option in Image Hotspots widget
* Updated link options to support custom attribute option of Elementor 2.9.0
* Fixed: Swiper slider for Elementor 2.9.0

== 1.2.8.5 ==
Release date: February 18, 2020
* Fixed: Content ticker was not working

== 1.2.8.4 ==
Release date: February 6, 2020
* Fixed: Lightbox option was not working in Instagram Feed widget
* Added: Image Link option in Instagram Feed widget