@@ -1,9 +1,10 @@
 == 1.2.9.3 ==
-Release date: April 15, 2020
+Release date: April 17, 2020
 * Added: Button width option
 * Fixed: WPML compatibility was missing for some widgets
 * Fixed: Gravity Forms CSS & JS files were loading on all pages
 * Fixed: Link effects CSS issue
+* Fixed: Title container HTML markup in Info Box and Info Box carousel widgets
 
 == 1.2.9.2 ==
 Release date: April 8, 2020
